# platzi-store-api-tests

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  index.html  main.py  pyproject.toml  settings.py
.github/workflows/: allure-pages.yml  allure-pages_v2.yml
latest/: index.html
latest/data/: behaviors.csv  packages.json  suites.json  timeline.json
latest/data/attachments/: 163f85083f1fbad4.txt  165da3f74b98bc4c.txt  3006b8e2bced69ab.txt  367e302a3467b4e9.txt  5fb03b1c17fbfd45.txt  62dcc9b3ce274708.txt  6aa4e9fddaa577a.txt  7e2bab6b793db723.txt  7ec622aa1be75a9c.txt  9145fbbe34a81ec3.txt  9419e71303d4b4ed.txt  9f55677d53901311.txt  ae899153dc0fbd0d.txt  bbcc3a0821ee3dd9.txt  c8133ab824c36a7c.txt  d72ab524a0c51365.txt  df6f58446ab42eba.txt
latest/data/test-cases/: 1bf8716c71cf5942.json  1fc21045b56cd72f.json  22b649782d1671f5.json  4b55be18924dde1a.json  5d02bc7489f54b8b.json  6c9aa3012e4e8ba0.json  832062de70cc22d6.json  934d109d681c342d.json  9f86a17b1a82ed19.json  a0a13b5d253f1eb3.json  a5782c4febf7abe3.json  b39a7865942d34c1.json  b9a2f5b39e905bca.json  (+2 more)
latest/export/: influxDbData.txt  prometheusData.txt
latest/history/: history-trend.json
latest/widgets/: duration-trend.json  retry-trend.json  status-chart.json
runs/1/: index.html
runs/10/: index.html
runs/2/: index.html
runs/3/: index.html
runs/4/: index.html
runs/5/: index.html
runs/6/: index.html
runs/7/: index.html
runs/8/: index.html
runs/9/: index.html
src/clients/: auth_client.py  categories_client.py  http_client.py  products_client.py  users_client.py
src/fixtures/: categories.py  clients.py  products.py  users.py
src/models/: auth.py  base_response.py  categories.py  products.py  users.py
src/utils/: assertions.py  fake_data.py  http_hooks.py
tests/: conftest.py
tests/auth/: test_refreshing_access_token.py  test_retrieving_user_profile.py  test_user_login.py
tests/categories/: test_create_categories.py  test_delete_categories.py  test_get_categories.py  test_update_categories.py
tests/products/: test_create_products.py
tests/users/: test_create_users.py  test_delete_users.py  test_get_users.py  test_update_users.py
(+728 files in other folders)
